2024-05-01T00:58:08Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8903723052 # 231
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-01
* notice: last 14d: unq all: 5 9
* notice: prev accum: outdated-unq outdated-all / unq all: 898 1638 / 903 1647
* notice: next accum: outdated-unq outdated-all / unq all: 898 1638 / 904 1648
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-04-17 2024-04-30]

2024-04-30T16:15:24Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8898160311 # 230
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-30
* notice: last 14d: unq all: 4 9
* notice: prev accum: outdated-unq outdated-all / unq all: 896 1635 / 903 1647
* notice: next accum: outdated-unq outdated-all / unq all: 898 1638 / 903 1647
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-04-16] / []

2024-04-30T00:53:50Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8887560456 # 228
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-30
* notice: last 14d: unq all: 5 11
* notice: prev accum: outdated-unq outdated-all / unq all: 894 1633 / 903 1647
* notice: next accum: outdated-unq outdated-all / unq all: 896 1635 / 903 1647
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +2 +3 -0 -1 / 2 2
* notice: removed / changed dates: [2024-04-15] / [2024-04-16]

2024-04-29T00:54:58Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8871739254 # 225