@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-05-01T00:58:08Z",
-  "count_outdated" : 1638,
-  "uniques_outdated" : 898,
+  "timestamp" : "2024-05-01T16:14:51Z",
+  "count_outdated" : 1640,
+  "uniques_outdated" : 899,
   "count" : 1648,
   "uniques" : 904,
   "clones" : [
-    {
-      "timestamp": "2024-04-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-04-18T00:00:00Z",
       "count": 2,
